Fix overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -112,7 +112,7 @@ a, a:visited {
         width: 98%;
         margin: 5px;
         padding: 10px;
-        height: 130px;
+        height: 150px;
     }
 }
 .blau{
